docker & source: move source to docker folder; add http folder for http-server docker; move xinet.d config to one folder

--- a/docker-tools/http/try2.html
+++ b/docker-tools/http/try2.html
@@ -6,7 +6,7 @@
 <p>
 <p>
 <hr>
-<FORM ACTION="/cgi-bin/hello.pl" METHOD="GET">
+<FORM ACTION="/hello.php" METHOD="GET">
 Type you name:
 <p> <INPUT TYPE="TEXT" NAME="name">
 <p> <INPUT TYPE="SUBMIT">
