--- a/docker-tools/http/try1.html
+++ b/docker-tools/http/try1.html
@@ -4,10 +4,10 @@
 </head>
 <body>
 <p>This is a text line.</p>
-<p><a href="usage/index.html">This is a hyperlink</a>.
+<p><a href="try2.html">This is a hyperlink</a>.
 </p>
 <p>Here is an embedded picture:
-<img border="0" src="mypic.gif" width="164"
-height="123"></p>
+<img border="0" src="logo.png" width="128"
+height="128"></p>
 </body>
 </html>
